namespaces/live.cloud-platform.service.justice.gov.uk/artefact-library/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: artefact-library
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "digital-operations"
    cloud-platform.justice.gov.uk/application: "Gov.UK Prototype Kit"
    cloud-platform.justice.gov.uk/owner: "digital-operations: platforms@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/artefact-library"
    cloud-platform.justice.gov.uk/team-name: "digital-operations"
    cloud-platform.justice.gov.uk/review-after: ""
